# unifiedui-sample-rest-api-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  echo_agent.py  foundry_proxy_agent.py  langchain_agent.py  langgraph_agent.py
app/api/v1/: agent.py  conversations.py  health.py
app/middleware/: auth.py
app/session/: __init__.py  store.py
app/tools/: __init__.py  sample_tools.py
playground/: test_e2e.py
playground/tests/: test_endpoints.py
